# anomaly-detection-retail

./: .gitignore  README.md  main.py  paper.tex  pyproject.toml
data/processed/: food_prices_daily.parquet  m5_daily.parquet  online_retail_daily.parquet  synthetic_daily.parquet
data/results/: all_results.parquet  alpha_ablation_results.parquet  online_retail_prepared.pkl  phase3_results.parquet  stl_adapt_m5_results.parquet  stl_pelt_m5_results.parquet  synthetic_prepared.pkl  timesnet_calendar_results.parquet
scripts/: alpha_ablation.py  analyze_phase3.py  case_study_bbm.py  clean_validation.py  debug_prophet.py  debug_prophet2.py  final_summary.py  generate_figures.py  prepare_calendar_data.py  run_bg.sh  run_experiments.py  run_friedman.py  run_phase3.py  run_pipeline.py  run_stl_adapt.py  run_stl_pelt.py  run_timesnet.py  show_bbm_data.py  test_methods.py  test_timesnet.py
src/data/: download_datasets.py  indonesian_calendar.py  inject_anomalies.py  preprocessing.py  realistic_injection.py
src/evaluation/: metrics.py
src/methods/: autoencoder.py  base.py  isolation_forest.py  lof.py  prophet_residual.py  stl_hampel.py  stl_hybrid_ae.py  stl_iqr.py  stl_pelt.py  stl_seasonal_adapt.py  timesnet_detector.py
