[project]
name = "anomaly-detection-retail"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "cmdstanpy<1.3.0",
    "darts>=0.44.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>3.0",
    "prophet==1.3.0",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "ruptures>=1.1.10",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.14.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.12.0",
]
